--- a/src/e_vote/AdminMain.form
+++ b/src/e_vote/AdminMain.form
@@ -147,6 +147,9 @@
         </Component>
         <Component class="javax.swing.JRadioButton" name="Can4Rs">
           <Properties>
+            <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
+              <ComponentRef name="buttonGroupRs"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Maxwell"/>
           </Properties>
         </Component>
